# foil

./: Cargo.toml  build.rs  flake.nix  lib.rs
src/: bind_mount.rs  bubblewrap.rs  check_subprocess.rs  foil.rs  funcs.c  lib.rs  main.rs  network.rs  parse_mountinfo.rs  privilged_op.rs  serde_errno.rs  setup_newroot.rs  types.rs  utils.rs
