[package]
name = "oxide_foil"
authors = ["C2Rust"]
version = "0.0.0"
publish = false
edition = "2021"
autobins = true


[dependencies]
libc = "0.2"
nix = { version = "0.29.0", features = ["acct", "aio", "dir", "env", "event", "fanotify", "feature", "fs", "hostname", "inotify", "ioctl", "kmod", "memoffset", "mman", "mount", "mqueue", "net", "personality", "pin-utils", "poll", "process", "pthread", "ptrace", "quota", "reboot", "resource", "sched", "signal", "socket", "term", "time", "ucontext", "uio", "user", "zerocopy"] }

[build-dependencies]
cc = "1.0"
