[package]
name = "foil"
authors = ["C2Rust", "Maix <maieul.dev@familleboyer.net>"]
version = "0.1.0"
publish = false
edition = "2021"
autobins = true


[dependencies]
bitflags = { version = "2.6.0", features = ["serde"] }
bstr = "1.11.1"
libc = "0.2"
nix = { version = "0.29.0", features = [
	"acct",
	"aio",
	"dir",
	"env",
	"event",
	"fanotify",
	"feature",
	"fs",
	"hostname",
	"inotify",
	"ioctl",
	"kmod",
	"memoffset",
	"mman",
	"mount",
	"mqueue",
	"net",
	"personality",
	"pin-utils",
	"poll",
	"process",
	"pthread",
	"ptrace",
	"quota",
	"reboot",
	"resource",
	"sched",
	"signal",
	"socket",
	"term",
	"time",
	"ucontext",
	"uio",
	"user",
	"zerocopy",
] }
phf = { version = "0.11.2", features = ["macros"] }
postcard = { version = "1.1.1", features = ["use-std"], default-features = false }
serde = { version = "1.0.217", features = ["derive"] }
caps = "0.5.5"
thiserror = "2.0.11"
syscalls = { version = "0.6.18", default-features = false, features = ["all"] }

[build-dependencies]
